Fix keyboard shortcuts on settings tab being wrapped (#8825)
* Fix keyboard shortcuts being wrapped

Setting $spacing-8 gap between the labels and the shortcuts


* Add the block margin to the rows, not to the keys


* Add the inline margin to the shortcuts, not to the keys

--- a/res/css/views/settings/_KeyboardShortcut.scss
+++ b/res/css/views/settings/_KeyboardShortcut.scss
@@ -20,17 +20,11 @@ limitations under the License.
         padding: 5px;
         border-radius: 4px;
         background-color: $header-panel-bg-color;
-        margin-right: 5px;
         min-width: 20px;
         text-align: center;
         display: inline-block;
         border: 1px solid $kbd-border-color;
         box-shadow: 0 2px $kbd-border-color;
-        margin-bottom: 4px;
         text-transform: capitalize;
-
-        & + kbd {
-            margin-left: 5px;
-        }
     }
 }
